--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -1,3 +1,8 @@
 .footer {
     --footer-background-color: transparent !important;
+
+    .link {
+        display: block;
+        text-align: center;
+    }
 }
